# Network-Programming

Versuch1/Daytime_Server/: Makefile  Socket.c  Socket.h  config.status  daytime_client.c  daytime_server.c  echo_client  echo_client.c  echo_server  echo_server.c
Versuch1/NP_T1/: Makefile.am  Makefile.in  Socket.h  config.status  configure  echo_client.c  echo_server.c
Versuch1/tcp_examples/: Makefile  Makefile.am  Makefile.in  Socket.c  Socket.h  client  client.c  daytime_client  daytime_client.c  daytime_server  daytime_server.c  discard_client  discard_server  echo_client  echo_server  echo_server.c  echo_thread_client  echo_thread_client.c  echo_thread_server  echo_thread_server.c
Versuch1/tcp_examples/.deps/: Socket.Po  daytime_client.Po  daytime_server.Po  discard_client.Po  discard_server.Po  echo_client.Po  echo_server.Po  echo_thread_client.Po  echo_thread_server.Po
Versuch1/tcp_examples/autom4te.cache/: requests
Versuch1/udp_examples/: Makefile  Socket.c  Socket.h
Versuch2/NP_T1/: .nfs.8081f420.1c9a4.4  Makefile  Socket.c  echo_client  echo_server
Versuch2/chargen/: Makefile  Makefile.in  Socket.c  Socket.h  echo_client  echo_client.c  echo_server  echo_server.c
Versuch2/echo_thread/: Socket.c  Socket.h  config.status  echo_client  echo_server  echo_thread_server.c
Versuch2/tcp_examples/: Makefile  echo_client.c  echo_server.c
Versuch2/tcp_examples_discard/: Makefile  Socket.c  Socket.h  config.status  discard_client.c  echo_client  echo_server  echo_server.c
Versuch2/udp_examples/: Makefile.in  config.status  echo_client.c
(+18 files in other folders)
